ensure `jdk.localedata` module is added when `includeLocales` is configured, and log addition